--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
   "author": "Mohammed Alrushdy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0"
   }
 }
